--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: pseudo_3d_chart
-description: "A new Flutter package project."
+name: isometric_charts
+description: "Small package to create bar charts with a pseudo 3d effect"
 version: 0.0.1
 homepage:
 
